--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
+    "jodit-react": "^1.3.39",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
     "next-auth": "^4.18.7",
