--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.9",
     "jodit-react": "^1.3.39",
-    "mongoose": "^6.8.1",
+    "mysql2": "^3.3.4",
     "next": "13.0.7",
-    "next-auth": "^4.18.7",
-    "next-auth-client": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
