--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "ajv": "^8.11.2",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "jodit-react": "^1.3.39",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.4",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
-    "react-toastify": "^9.1.1"
+    "react-modal": "^3.16.1",
+    "react-toastify": "^9.1.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
