--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "jodit-react": "^1.3.39",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.4",
     "next": "13.0.7",
