--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.11.2",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
+    "cookies-next": "^2.1.2",
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "jodit-react": "^1.3.39",
